--- a/backend_server/package.json
+++ b/backend_server/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
         "cookie-parser": "~1.4.3",
+        "crypto-js": "^3.1.9-1",
         "debug": "~2.6.9",
         "express": "~4.16.0",
         "http-errors": "~1.6.2",
