--- a/web/package.json
+++ b/web/package.json
@@ -24,10 +24,13 @@
         "@angular/platform-browser": "^6.1.4",
         "@angular/platform-browser-dynamic": "^6.1.4",
         "@angular/router": "^6.1.4",
+        "@types/crypto-js": "^3.1.43",
         "core-js": "^2.4.1",
+        "crypto-js": "^3.1.9-1",
         "highcharts": "^6.1.0",
         "lodash": "^4.17.10",
         "ng-zorro-antd": "^1.4.0",
+        "ngx-cookie-service": "^1.0.10",
         "rxjs": "^6.2.2",
         "rxjs-compat": "^6.0.0-rc.0",
         "web-animations-js": "^2.3.1",
