--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
         "@angular/router": "^6.1.4",
         "@types/crypto-js": "^3.1.43",
         "classlist.js": "^1.1.20150312",
+        "codemirror": "^5.48.0",
         "core-js": "^2.4.1",
         "crypto-js": "^3.1.9-1",
         "highcharts": "^6.1.0",
