--- a/backend_server/package.json
+++ b/backend_server/package.json
@@ -6,15 +6,17 @@
         "start": "supervisor ./bin/www"
     },
     "dependencies": {
+        "agenda": "^2.0.2",
         "cookie-parser": "~1.4.3",
         "crypto-js": "^3.1.9-1",
         "debug": "~2.6.9",
+        "evenboy-ip2region": "0.0.2",
         "express": "~4.16.0",
         "http-errors": "~1.6.2",
         "jade": "~1.11.0",
-        "evenboy-ip2region": "0.0.2",
         "lodash": "^4.17.10",
         "mongoose": "^5.2.9",
-        "morgan": "~1.9.0"
+        "morgan": "~1.9.0",
+        "nodemailer": "^6.3.0"
     }
 }
