前端项目增加bundle.js，方便部署

--- a/web/angular.json
+++ b/web/angular.json
@@ -19,6 +19,7 @@
             "assets": [
               "src/assets",
               "src/favicon.ico",
+              "src/bundle.js",
               {
                 "glob": "**/*",
                 "input": "./node_modules/@ant-design/icons-angular/src/inline-svg/",
